fix!(ofrep): remove configuration endpoint as ofrep droped it from spec
